--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>pixel sale</title>
+<link rel="shortcut icon" href="leaf.ico" type="image/x-icon">
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 body {
