--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ div {
 </head>
 <body>
 
-<h1>*:~ LAST PIXEL SALE ~:*</h1>
+<h1>*:~ PIXEL SALE ~:*</h1>
 
 <div class="row">
     <div class="column">
