--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@ div {
   letter-spacing: -.003em;
   font-size: 40px;
   padding: 30px;
+  top: 0px;
+  bottom: 0px;
+  right: 0px;
+  left: 0px;
 }
 
 
@@ -57,7 +61,7 @@ div {
   }
   
 .container {
-    position: relative;
+    position: absolute;
     font-size: 40px;
     min-height: 325px;
     width: 100%;
