--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ div {
   letter-spacing: -.003em;
   font-size: 40px;
   padding: 30px;
+  position: absolute;
   top: 0px;
   bottom: 0px;
   right: 0px;
@@ -71,7 +72,7 @@ div {
 }
 
 .image {
-  display: block;
+  position: absolute;
   height: auto;
   display: auto;
 }
