--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ div {
   }
   
 .container {
-    position: absolute;
+    position: relative;
     font-size: 40px;
     min-height: 325px;
     width: 100%;
