--- a/index.html
+++ b/index.html
@@ -161,6 +161,6 @@ div {
   </div>
 
   
-  <p>Which pixel art would you want to adopt? <3</p>
+  <p>Which pixel buddy would you want to adopt? <3</p>
 </body>
 </html>
