--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@ div {
   }
   
 .container {
-    position: relative;
+    position: inherit;
     font-size: 40px;
-    min-height: 325px;
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
