--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@ div {
 
   
 .overlay {
-  position: absolute;
+  position: inherit;
+  siplay: block;
   top: 0;
   bottom: 0;
   left: 0;
@@ -105,7 +106,7 @@ div {
 .text {
   color: white;
   font-size: 40px;
-  position: absolute;
+  position: inherit;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
