--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ div {
   }
   
 .container {
-    position: inherit;
+    position: relative;
     font-size: 40px;
     width: 100%;
     display: grid;
@@ -82,7 +82,7 @@ div {
 
   
 .overlay {
-  position: inherit;
+  position: relative;
   siplay: block;
   top: 0;
   bottom: 0;
@@ -106,7 +106,7 @@ div {
 .text {
   color: white;
   font-size: 40px;
-  position: inherit;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
