--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ div {
 
   
 .overlay {
-  position: relative;
+  position: absolute;
   siplay: block;
   top: 0;
   bottom: 0;
@@ -106,7 +106,7 @@ div {
 .text {
   color: white;
   font-size: 40px;
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
