--- a/index.html
+++ b/index.html
@@ -60,10 +60,13 @@ div {
     position: relative;
     font-size: 40px;
     width: 100%;
+    height: auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     row-gap: 0px;  
     overflow: hidden;
+   padding: 34.37% 0 0 0; /* 34.37% = 100 / (w / h) = 100 / (640 / 220) */
+   overflow: hidden;
    padding: 34.37% 0 0 0; /* 34.37% = 100 / (w / h) = 100 / (640 / 220) */
 }
 
@@ -92,7 +95,6 @@ div {
   width: 100%;
   opacity: 0;
   transition: 0.5s ease;
-;
 }
 
 .container:hover .overlay {
