--- a/index.html
+++ b/index.html
@@ -65,13 +65,11 @@ div {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     row-gap: 0px;  
     overflow: hidden;
-   padding: 34.37% 0 0 0; /* 34.37% = 100 / (w / h) = 100 / (640 / 220) */
-   overflow: hidden;
-   padding: 34.37% 0 0 0; /* 34.37% = 100 / (w / h) = 100 / (640 / 220) */
+    padding: 34.37% 0 0 0; /* 34.37% = 100 / (w / h) = 100 / (640 / 220) */
 }
 
 
-.container img {
+.container img (min-height: 325px) {
   display: block;
   max-width: 100%;
   max-height: 100%;
