--- a/index.html
+++ b/index.html
@@ -57,18 +57,19 @@ div {
   }
   
 .container {
-    position: relative;
+  
     font-size: 40px;
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     row-gap: 0px;  
+    position: relative;
     overflow: hidden;
     padding: 34.37% 0 0 0; /* 34.37% = 100 / (w / h) = 100 / (640 / 220) */
 }
 
 
-.img {
+.container img {
   display: block;
   max-width: 100%;
   max-height: 100%;
