--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@ div {
   display: block;
   max-width: 100%;
   max-height: 100%;
-  position: absolute;
-  height: auto;
+  position: relative;
   top: 0;
   bottom: 0;
   left: 0;
