--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ div {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     row-gap: 0px;  
-    position: relative;
+    position: absolute;
     overflow: hidden;
     padding: 34.37% 0 0 0; /* 34.37% = 100 / (w / h) = 100 / (640 / 220) */
 }
@@ -74,7 +74,7 @@ div {
   height: auto;
   max-width: 100%;
   max-height: 100%;
-  position: relative;
+  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
