--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ div {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     row-gap: 0px;  
-    position: absolute;
+    position: relative;
     overflow: hidden;
     padding: 34.37% 0 0 0; /* 34.37% = 100 / (w / h) = 100 / (640 / 220) */
 }
