--- a/index.html
+++ b/index.html
@@ -57,23 +57,24 @@ div {
   }
   
 .container {
-  
+    position: relative;
     font-size: 40px;
+    min-height: 325px;
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     row-gap: 0px;  
-    position: relative;
     overflow: hidden;
     padding: 34.37% 0 0 0; /* 34.37% = 100 / (w / h) = 100 / (640 / 220) */
 }
 
 
 .container img {
-  display: block;
+  display: auto;
   max-width: 100%;
   max-height: 100%;
   position: absolute;
+  height: auto;
   top: 0;
   bottom: 0;
   left: 0;
@@ -83,7 +84,6 @@ div {
   
 .overlay {
   position: absolute;
-  siplay: block;
   top: 0;
   bottom: 0;
   left: 0;
@@ -92,6 +92,7 @@ div {
   width: 100%;
   opacity: 0;
   transition: 0.5s ease;
+;
 }
 
 .container:hover .overlay {
