--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ div {
   
 .overlay {
   display: auto;
-  position: absolute;
+  position: relative;
   top: 0;
   bottom: 0;
   left: 0;
@@ -107,7 +107,7 @@ div {
   color: white;
   font-size: 40px;
   position: absolute;
-  top: 50%;
+  top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
