--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ div {
   
 .overlay {
   display: auto;
-  position: relative;
+  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
@@ -107,8 +107,8 @@ div {
   color: white;
   font-size: 40px;
   position: absolute;
-  top: 20%;
-  left: 50%;
+  top: 50%;
+  left: 0px;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
