--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ div {
 .container text {
   color: white;
   font-size: 40px;
-  position: absolute;
+  position: relative;
   top: 50%;
 
   transform: translate(-50%, -50%);
