--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ div {
   color: white;
   font-size: 40px;
   position: relative;
-  top: 50%;
-
+  top: 40%;
+  left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
