--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ div {
 }
 
 
-.container img > text {
+.container img  {
   display: auto;
   max-width: 100%;
   max-height: 100%;
@@ -92,7 +92,6 @@ div {
   width: 100%;
   opacity: 0;
   transition: 0.5s ease;
-;
 }
 
 .container:hover .overlay {
@@ -108,6 +107,7 @@ div {
   font-size: 40px;
   position: relative;
   top: 40%;
+  left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
