--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@ div {
 }
 
 .container text {
+  z-index:100;
   color: white;
   font-size: 40px;
-  position: relative;
+  position: absolute;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
