--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ div {
 
   
 .overlay {
-  display: auto;
-  position: relative;
+  display: block;
+  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
