--- a/index.html
+++ b/index.html
@@ -48,11 +48,19 @@ div {
     padding: 0 4px;
   }
   
+  .row text{
+    align: center;
+  }
+  
   .column {
     flex: 100%;
     max-width: 100%;
   }
   .column img {
+    vertical-align: middle;
+  }
+  
+  .column text {
     vertical-align: middle;
   }
   
