--- a/index.html
+++ b/index.html
@@ -115,8 +115,10 @@ div {
   color: white;
   font-size: 40px;
   position: absolute;
-  top: 40%;
-  left: 50%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
