--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@ div {
 
   
 .overlay {
-  display: block;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -116,7 +115,7 @@ div {
   color: white;
   font-size: 40px;
   position: absolute;
-  top: 0;
+  top: 50%;
   bottom: 0;
   left: 0;
   right: 0;
