--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@ div {
 
   
 .overlay {
+   display: auto;
+  max-width: 100%;
+  max-height: 100%;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -110,7 +113,10 @@ div {
 }
 
 .container text {
-  display: block;
+  display: auto;
+  max-width: 100%;
+  max-height: 100%;
+  position: absolute;
   z-index:100;
   color: white;
   font-size: 40px;
