--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@ div {
   bottom: 0;
   left: 0;
   right: 0;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
 }
 
   
