--- a/index.html
+++ b/index.html
@@ -114,17 +114,18 @@ div {
 
 .container text {
   display: auto;
-
+  max-width: 100%;
+  max-height: 100%;
+  position: absolute;
+  z-index:100;
+  color: white;
+  font-size: 40px;
+  position: absolute;
+  top: 50%;
+  bottom: 0;
+  left: 0;
+  right: 0;
   text-align: center;
-    position: relative;
-    font-size: 40px;
-    min-height: 325px;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    row-gap: 0px;  
-    overflow: hidden;
-    padding: 34.37% 0 0 0;
 }
 
 @media only screen and (min-width: 325px) and (min-height: 325px) {
